@@ -1085,14 +1085,14 @@ operator|.
 name|getCollatedResults
 argument_list|()
 decl_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
+literal|2
+argument_list|,
 name|collations
 operator|.
 name|size
 argument_list|()
-operator|==
-literal|2
 argument_list|)
 expr_stmt|;
 for|for
@@ -1266,6 +1266,122 @@ literal|"Original Word Should have been either fauth, home or loane."
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+block|}
+name|query
+operator|.
+name|set
+argument_list|(
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COLLATE_EXTENDED_RESULTS
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|response
+operator|=
+name|request
+operator|.
+name|process
+argument_list|(
+name|server
+argument_list|)
+operator|.
+name|getSpellCheckResponse
+argument_list|()
+expr_stmt|;
+block|{
+name|collations
+operator|=
+name|response
+operator|.
+name|getCollatedResults
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|collations
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|String
+name|collation1
+init|=
+name|collations
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getCollationQueryString
+argument_list|()
+decl_stmt|;
+name|String
+name|collation2
+init|=
+name|collations
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|getCollationQueryString
+argument_list|()
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|collation1
+operator|+
+literal|" equals "
+operator|+
+name|collation2
+argument_list|,
+name|collation1
+operator|.
+name|equals
+argument_list|(
+name|collation2
+argument_list|)
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Collation
+name|collation
+range|:
+name|collations
+control|)
+block|{
+name|assertTrue
+argument_list|(
+literal|"name:(+faith +hope +love)"
+operator|.
+name|equals
+argument_list|(
+name|collation
+operator|.
+name|getCollationQueryString
+argument_list|()
+argument_list|)
+operator|||
+literal|"name:(+faith +hope +loaves)"
+operator|.
+name|equals
+argument_list|(
+name|collation
+operator|.
+name|getCollationQueryString
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 block|}
